--- a/src/styles/presale.scss
+++ b/src/styles/presale.scss
@@ -1,23 +1,97 @@
 .presale{
     width: 100%;
-    padding: 0 30px 0 30px;
+    padding: 30px 20px 0 20px;
+    text-align: center;
     .presale-container{
         width: 100%;
+        max-width: 600px;
         min-height: 200px;
         border-radius: 15px;
+        display: inline-flex;
+        flex-direction: column;
+        align-items: center;
+        padding-top: 30px;
+        padding-bottom: 30px;
         background: linear-gradient(to top, #1a2230, #303f54);
-        .presale-info{
+
+        .presale-header{
+            width: 80%;
+            display: flex;
+            flex-direction: column;
+            .title{
+                color: #d1dee4;
+                font-weight: 700;
+                font-size: 25px;
+                font-style: normal;
+                font-family: monospace;
+                text-shadow: 0 4px 4px rgb(0 0 0 / 25%);
+                small{
+                    font-size: 22px;
+                    font-weight: 500;
+                    color:#067ab1;
+                }
+            }
+            .description{
+                font-size: 15px;
+                color:#728ea2;
+                font-style: normal;
+                text-shadow: 0 4px 4px rgb(0 0 0 / 25%);
+                text-align: right;
+                padding:5px;
+            }
+        }
+        .overview-info{
             display: flex;
             display: flex;
             justify-content: space-around;
             .info-item{
-                width: 300px;
+                // width: 300px;
                 padding: 20px;
                 text-align: center;
                 color: #deffff;
+                text-shadow: 0 4px 4px rgb(0 0 0 / 25%);
                 .value{
-                    font-family: Square;
-                    font-size: 25px;
+                    font-family: initial;
+                    font-size: 22px;
+                }
+            }
+        }
+        .item{
+            border-top-width: 4px;
+            border-color: #232e3f00;
+            overflow-anchor: none;
+            .item-title{
+                color: #d9dadc;
+                font-weight: normal !important;
+                font-family: -webkit-pictograph;
+                background-color: #17202e6b;
+            }
+            .item-body{
+                .unit-row{
+                    color: #728ea2;
+                    font-weight: lighter;
+                    font-family: -webkit-pictograph;
+                    text-align: left;
+                    .title{
+                        width:calc(100% - 100px);
+                        display: inline-block;
+                        text-align: left;
+                    }
+                    .value{
+                        width:100px;
+                        display: inline-block;
+                        text-align: right;
+                    }
+                }
+                .presale-link{
+                    color: #edf2f7;
+                    font-weight: 300;
+                    font-family: monospace;
+                    font-size: 13px;
+                    width: 100%;
+                    &:focus{
+                        box-shadow: none;
+                    }
                 }
             }
         }
