--- a/src/styles/dashboard-card.scss
+++ b/src/styles/dashboard-card.scss
@@ -2,7 +2,7 @@
     width: 350px;
     height: 80px;
     margin-top: 30px;
-    background: linear-gradient(to top, #1a2230, #303f54);
+    background: linear-gradient(to top, #5b7cb57a, #303f54);
     display: flex;
     border-radius: 10px;
     flex-direction: column;
