--- a/src/styles/sidebar.scss
+++ b/src/styles/sidebar.scss
@@ -14,7 +14,7 @@
     &:hover:not(.sidebar-footer){
         
             text-decoration: none !important;
-            color:#5d5e5e !important
+            color:#9aa5a5 !important
         
     }
 }
