--- a/src/styles/dashboard-card.scss
+++ b/src/styles/dashboard-card.scss
@@ -3,6 +3,7 @@
     height: 80px;
     margin-top: 30px;
     background: linear-gradient(to top, #5b7cb57a, #303f54);
+    box-shadow: rgb(165 199 197 / 40%) 0px -1px 0px 0px inset;
     display: flex;
     border-radius: 10px;
     flex-direction: column;
