--- a/src/styles/sidebar.scss
+++ b/src/styles/sidebar.scss
@@ -1,43 +1,53 @@
-.sidebar-logo{
-    color: #fff;
-    margin-bottom: 50px;
+.sidebar{
+    box-shadow:7px 11px 63px rgb(255 212 0 / 10%);
+    background: #354255eb;
     display: flex;
-    font-size: 20px;
+    flex-direction: column;
+    justify-content: space-between;
+
+}
+.sidebar-logo{
+    color: #FAD338;
+    display: flex;
     text-align: center;
     flex-direction: column;
     align-items: center;
+    font-size: 40px;
+    text-shadow: 0 2px 2px rgb(0 0 0 / 25%);
     small{
-        font-size: 12px;
+        color:#fff;
+        font-size: 15px;
     }
 }
 
-.css-zm01lp, .css-owjkmg{
+.sidebar-content{
     justify-content: left !important;
     align-items: flex-start !important; 
-    &:focus{
+    padding-left: 20px;
+    *:focus{
         box-shadow: none !important;
-    }
-    &:hover:not(.sidebar-footer){
-        
-            text-decoration: none !important;
-            color:#9aa5a5 !important
-        
     }
 }
 .sidebar-link{
-    line-height: 50px !important;
+    
+    line-height: 30px !important;
     width: 150px;
-    color:#fff !important;
+    color:#FAD338 !important;
     font-weight: normal !important;
-    font-family: -webkit-pictograph;
+    font-size: 20px !important;
+    
 }
 
 .sidebar-footer{
-    position: absolute;
-    bottom:20px;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    Button{
+        font-size: 25px;
+        color:white;
+    }
 }
 .sidebar-footer:hover{
     color:black;
-    position: absolute;
-    bottom:20px;
+  
 }
