--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -1,70 +1,89 @@
 @import url('https://fonts.googleapis.com/css2?family=Alegreya+SC&display=swap');
 @import "./variables/color.scss";
-.home{
-    background-color:#fff;
-    height: 100vh;
-    .section{
+.home {
+    background-color: #fff;
+    width: 100%;
+    .Banner {
+        background-color: #f9efe4;
+        background-image: url("Images/Home/Banner/Bg.png");
+        background-size: 100%;
         width: 100%;
-        display: flex;
-        padding: 0 150px 0 150px;
-        align-content: space-around;
-        justify-content: space-between;
-        .description{
+        padding: 10em 1em 2em 5em;
+        .section {
+            width: 100%;
             display: flex;
-            flex-direction: column;
             align-items: center;
-            .description_title{
-                color:black;
-                font-family: 'Alegreya SC', serif;
-                font-style: normal;
-                font-weight: 700;
-                font-size: 40px;
-                margin-top: 40px;
-                text-align: center;
-                // text-shadow: 0 4px 4px rgb(0 0 0 / 25%);
-            }
-            .description_body{
-                margin-top: 40px;
-                color:black;
-                font-family: 'Alegreya SC', serif;
-                font-style: normal;
-                font-weight: 500;
-                font-size: 33px;
-                text-align: center;
-            }
-            .presaleBtn{
-                font-family: 'Alegreya SC', serif;
-                font-size: 25px;
-                small{
-                    font-size: 20px;
-                    font-family: 'Alegreya SC', serif;
+            justify-content: space-between;
+            flex-wrap: wrap;
+            .left-part {
+                .title_text {
+                    margin-top: 0.3em;
+                    font-size: 45pt;
+                    color: #192748;
                 }
+                .description_text {
+                    margin-top: 1em;
+                    font-size: 19px;
+                    color: #192748;
+                }
+                .active {
+                    background-color: #f2b42a;
+                    color: #192748;
+                }
+            }
+            .right-part {
+                display: flex;
+                justify-content: flex-start;
+                align-items: flex-start;
+                flex-wrap: wrap;
+                padding: 10px;
+                max-width: 800px;
             }
         }
-        .home-footer{
+    }
+    .Info {
+        background-color: #fff;
+    }
+    .Feature {
+        background-color: blue;
+    }
+    .Distribution {
+        background-color: blue;
+    }
+    .Header {
+        width: 100%;
+        height: 8em;
+        background-color: transparent;
+        position: fixed;
+        top: 0;
+        padding: 0 75px 0 75px;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        .name {
+            font-size: 52pt;
+            color: #192748;
+        }
+        .right-bar {
             display: flex;
-            justify-content: space-between;
             align-items: center;
-            position: fixed;
-            bottom: 20px;
-            width: 80%;
-            
-            .social-links{
-                Button{
-                    color:black;
-                    font-size: 45px;
-                    &:focus{
-                        box-shadow: none;
-                    }
+            justify-content: space-between;
+            .social-buttons {
+                display: flex;
+                align-items: center;
+                justify-content: space-between;
+                a {
+                    margin-left: 10px;
                 }
             }
-            .other-links{
-                margin-left: 20px;
-                font-size: 22px;
-                font-family: 'Alegreya SC', serif;             
-                big {
-                    font-family: 'Alegreya SC', serif;    
-                    font-size: 28px;
+            .action-buttons {
+                .active {
+                    background-color: #f2b42a;
+                    color: #192748;
+                }
+                .deactive {
+                    background-color: #fff;
+                    color: #6c757d;
                 }
             }
         }
