--- a/src/App.scss
+++ b/src/App.scss
@@ -8,44 +8,46 @@
 @import "./styles/presale.scss";
 @import "./styles/stack.scss";
 @import "./styles/calculator.scss";
-
-
 ::-webkit-scrollbar {
     width: 8px;
 }
+
 ::-webkit-scrollbar-thumb {
-    background: linear-gradient(-45deg, #64c9fc, #446cf6 90%);
+    background: linear-gradient(-45deg, #fce7d1, #fcac05 90%);
     border-radius: 8px;
 }
+
 ::-webkit-scrollbar-track {
     box-shadow: #dce6f9 0px 0px 5px inset;
     border-radius: 10px;
 }
-*{
+
+* {
     font-family: 'Alegreya SC', serif;
 }
-.contribute-modal{
+
+.contribute-modal {
     border-radius: 30px !important;
-    span{
-        color:#3f095a;}
-        *{
-            font-family:ui-monospace;
-            text-shadow: 0 4px 4px rgb(0 0 0 / 25%);
-        
+    span {
+        color: #3f095a;
+    }
+    * {
+        font-family: ui-monospace;
+        text-shadow: 0 4px 4px rgb(0 0 0 / 25%);
+    }
+    input {
+        border-radius: 20px;
+    }
+    .chakra-modal__header {
+        color: #1fc7d4;
+    }
+    .custom-button {
+        background-color: rgb(31, 199, 212);
+        box-shadow: rgb(14 14 44 / 40%) 0px -1px 0px 0px inset;
+        color: #fff;
+        border-radius: 20px;
+        &:hover {
+            background-color: rgb(16, 131, 139);
         }
-        input{
-            border-radius: 20px;
-        }
-        .chakra-modal__header{
-            color: #1fc7d4;
-        }
-        .custom-button{
-            background-color: rgb(31, 199, 212);
-            box-shadow: rgb(14 14 44 / 40%) 0px -1px 0px 0px inset;
-            color:#fff;
-            border-radius: 20px;
-            &:hover{
-                background-color: rgb(16, 131, 139);
-            }
-        }
+    }
 }
